--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -227,6 +227,7 @@
             color: #fff;
             font-size: 16px;
             font-weight: 600;
+            white-space: nowrap;
         }
 
         .logo-text span {
@@ -748,6 +749,20 @@
                 #panel-checklist .doc-content {
                     padding-top: 0 !important;
                     /* No padding - content starts immediately after fixed header */
+                    padding-bottom: 100px !important;
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                }
+
+                #panel-schedule .doc-content {
+                    padding-top: 0 !important;
+                    padding-bottom: 100px !important;
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                }
+
+                #panel-info .doc-content {
+                    padding-top: 0 !important;
                     padding-bottom: 100px !important;
                     padding-left: 0 !important;
                     padding-right: 0 !important;
@@ -4506,8 +4521,8 @@
         <div class="logo">
             <a href="javascript:void(0)" onclick="location.reload();"
                 style="display:flex;align-items:center;gap:10px;text-decoration:none;cursor:pointer;">
-                <div class="logo-icon">DJ</div>
-                <div class="logo-text">디자인지그 <span>통합 관리 시스템</span></div>
+                <img src="source_icon.png" alt="DJ" style="width:40px;height:40px;border-radius:8px;">
+                <div class="logo-text">DESIGN JIG</div>
             </a>
         </div>
         <div class="header-actions">
@@ -4919,13 +4934,12 @@
                             style="display:none; margin-top:4px; opacity: 1.0; align-items: center; justify-content: space-between;">
                             <div
                                 style="font-size:11px; color:#ffffff; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; flex: 1;">
-                                📍 <span id="headerSiteAddress">현장주소</span> | 📞 <span id="headerClientPhone">연락처</span>
-                                |
-                                📅 <span id="headerPeriod">공사기간</span>
+                                <span id="headerSiteAddress">현장명</span> ㅣ <span id="headerClientName">성명</span> ㅣ <span id="headerClientPhone">연락처</span>
                             </div>
                             <!-- [New] Page Title (Right) -->
                             <div id="headerMobileTitle"
-                                style="font-weight:700; font-size:12px; color:#fff; margin-left:8px; white-space:nowrap; display:none;">
+                                style="font-weight:700; font-size:12px; color:#fff; margin-left:8px; white-space:nowrap; display:block;">
+                                체크리스트
                             </div>
                         </div>
                     </div>
