Fix: Show Global Header, Hide Old Panel Header on Mobile

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -598,7 +598,7 @@
 
                 /* [Critical Fix] Header below global header */
                 #headerMobileInfo {
-                    display: none !important;
+                    display: flex !important;
                     /* Hidden by default */
                     align-items: flex-end !important;
                     /* Bottom alignment */
@@ -895,7 +895,7 @@
             #panel-checklist .doc-header,
             #panel-schedule .doc-header,
             #panel-info .doc-header {
-                display: block !important;
+                display: none !important;
                 position: fixed !important;
                 top: 54px !important;
                 /* 검정색 헤더(54px) 바로 아래 */
