Fix: Hide Mobile Dropdown Filters to match Tab Design

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -1015,7 +1015,7 @@
 
             /* [New] Mobile Checklist Controls (Single Row) */
             .mobile-checklist-controls {
-                display: flex !important;
+                display: none !important;
                 align-items: center;
                 gap: 8px;
                 margin-bottom: 12px;
