Fix: Cleanup CSS conflicts and Final Polish for Mobile Layout

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -998,12 +998,8 @@
                 width: 100%;
             }
 
-            /* Show Mobile Dropdowns */
-            .mobile-checklist-controls {
-                display: flex !important;
-                gap: 8px !important;
-                margin-bottom: 8px !important;
-            }
+            /* Mobile Dropdowns Hidden (Tabs used instead) */
+            /* Removed conflicting display:flex rule */
 
             /* Ensure the mobile header title (right side) is visible and larger */
             #headerMobileTitle {
