Fix: Restore Mobile Dropdown Controls to match user design screenshot

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -1011,7 +1011,7 @@
 
             /* [New] Mobile Checklist Controls (Single Row) */
             .mobile-checklist-controls {
-                display: none !important;
+                display: flex !important;
                 align-items: center;
                 gap: 8px;
                 margin-bottom: 12px;
