Fix: Remove duplicate CSS rule causing Blue Header to appear on Main Screen

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -820,13 +820,7 @@
                     padding-right: 0 !important;
                 }
 
-                /* Reset standard headerMobileInfo margins */
-                #headerMobileInfo {
-                    width: 100% !important;
-                    display: flex !important;
-                    align-items: center;
-                    justify-content: space-between;
-                }
+                /* Reset standard headerMobileInfo margins - Removed Duplicate Rule */
             }
 
             /* Restored Mobile Styles */
