Fix: Delete LAST remaining duplicate CSS rule forcing Blue Header display

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -985,12 +985,7 @@
                 padding-bottom: 80px !important;
             }
 
-            /* Reset standard headerMobileInfo margins */
-            #headerMobileInfo {
-                margin-top: 0 !important;
-                display: flex !important;
-                width: 100%;
-            }
+            /* Rogue #headerMobileInfo block removed (Line 989) */
 
             /* Mobile Dropdowns Hidden (Tabs used instead) */
             /* Removed conflicting display:flex rule */
