--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="디자인지그 - 오래 살수록, 더 좋아지는 집">
     <meta property="og:description" content="오래 살수록, 더 좋아지는 집. 디자인지그가 만듭니다.">
     <meta property="og:image"
-        content="https://res.cloudinary.com/designjig/image/upload/v1766495336/%E1%84%85%E1%85%A9%E1%84%80%E1%85%A9_w3be1q.png">
+        content="https://res.cloudinary.com/designjig/image/upload/v1769232218/sfugtbfiuyi8ehvtkzcs.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="디자인 지그">
@@ -24,7 +24,7 @@
     <meta name="twitter:title" content="디자인 지그 - 깔끔하고 시대를 초월한 인테리어 경험">
     <meta name="twitter:description" content="디자인 지그는 아름답고 기능적인 공간을 만듭니다.">
     <meta name="twitter:image"
-        content="https://res.cloudinary.com/designjig/image/upload/v1766495336/%E1%84%85%E1%85%A9%E1%84%80%E1%85%A9_w3be1q.png">
+        content="https://res.cloudinary.com/designjig/image/upload/v1769232218/sfugtbfiuyi8ehvtkzcs.png">
 
     <!-- Icons & Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png?v=final_orig_file">
