--- a/columns.html
+++ b/columns.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="COLUMNS - 디자인 지그">
     <meta property="og:description" content="인테리어 가이드, 시공 팁, 디자인 이야기를 확인해보세요.">
     <meta property="og:image"
-        content="https://res.cloudinary.com/designjig/image/upload/v1766495336/%E1%84%85%E1%85%A9%E1%84%80%E1%85%A9_w3be1q.png">
+        content="https://res.cloudinary.com/designjig/image/upload/v1769232218/sfugtbfiuyi8ehvtkzcs.png">
     <meta property="og:site_name" content="디자인 지그">
 
     <!-- 폰트 최적화: preconnect + preload -->
