--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.designjig.com/portfolio">
     <meta property="og:title" content="PORTFOLIO - 디자인 지그">
-    <meta property="og:description" content="디자인 지그의 인테리어 시공 사례를 확인하세요.">
+    <meta property="og:description" content="기준으로 완성하는 인테리어. 디자인지그의 시공 사례와 칼럼을 소개합니다.">
     <meta property="og:image"
         content="https://res.cloudinary.com/designjig/image/upload/v1769232218/sfugtbfiuyi8ehvtkzcs.png">
     <meta property="og:site_name" content="디자인 지그">
