--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.designjig.com/">
     <meta property="og:title" content="디자인지그 | 오래 살수록, 더 좋아지는 집">
-    <meta property="og:description" content="기준으로 완성하는 인테리어. 디자인지그의 시공 사례와 칼럼을 소개합니다.">
+    <meta property="og:description" content="기준으로 완성하는 인테리어. 디자인지그 시공 사례와 칼럼.">
     <meta property="og:image"
         content="https://res.cloudinary.com/designjig/image/upload/v1769232218/sfugtbfiuyi8ehvtkzcs.png">
     <meta property="og:image:width" content="1200">
