--- a/quote.html
+++ b/quote.html
@@ -711,7 +711,7 @@
 
     <script>
         // [통합] Google Apps Script Web App URL
-        const GAS_URL = 'https://script.google.com/macros/s/AKfycbyYiH4WE2WBLXG0Fk_grCSh_xYwoHRTR1ckIKc50yBLhSH2KnYpPN8G19xVEMmj8vKvew/exec'; kIKc50yBLhSH2KnYpPN8G19xVEMmj8vKvew / exec';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyYiH4WE2WBLXG0Fk_grCSh_xYwoHRTR1ckIKc50yBLhSH2KnYpPN8G19xVEMmj8vKvew/exec';
 
         // 성공 모달 함수
         function showSuccessModal() {
